schema/testdata/errors/default_invalid_expression.keel
model Post {
    fields {
        //expect-error:41:43:AttributeExpressionError:operator '==' not supported in this context
        published Boolean @default(true == false)
        //expect-error:35:38:AttributeExpressionError:unknown identifier 'ctx'
        isAuthed Boolean @default(ctx.isAuthenticated)
    }
}
